--- a/style.css
+++ b/style.css
@@ -30,11 +30,11 @@ footer.index:hover {
     color:red
 }
 body.box {
-    background-color: aqua;
     margin:20px;
     padding:10px;
     border:3px dashed blue;
-    width:500px;
+    width:500px 300px;
+    background-color: aqua;
 }
 body.media {
     position:absolute;
