--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ div.nested {
 footer.index:hover {
     color:red
 }
-body.box {
+div.box {
     margin:20px;
     padding:10px;
     border:3px dashed blue;
