discovered i dont have to wait for github to do its thing, i can just view the website with the files and never deal with github till the end so here is the css assignment finished.

--- a/style.css
+++ b/style.css
@@ -27,23 +27,35 @@ div.nested {
     border: 5px outset blue
 }
 footer.index:hover {
-    color:red
+    color:red;
 }
-div.box {
+footer {
+    position: absolute;
+    left: 50px;
+    bottom: 0px;
+}
+div#box {
     margin:20px;
     padding:10px;
     border:3px dashed blue;
     width:500px 300px;
     background-color: aqua;
 }
-body.media {
-    position:absolute;
-    left: 50px;
-    top: 100px;
-}
-header.sticky {
+header#media {
     position:sticky;
     top: 0;
     padding: 3px;
     background-color: lightblue;
 }
+#anim {
+    animation-name: marquee;
+    animation-duration: 5s;
+    position: relative;
+    background-color: red;
+}
+@keyframes marquee {
+    0% {left:0px;}
+    50% {left:400px;}
+    100% {left:0px;}
+}
+
