--- a/style.css
+++ b/style.css
@@ -1,23 +1,19 @@
-header {
-    color:darkorchid;
-}
-ul {
+ul,ol{
     color:red;
-}
-ol {
-    color:blue;
 }
 summary,p,footer {
     color:darkgray;
 }
-div li {
-    font-size:medium;  
+div.container li {
+    font-size: 15px;  
 }
 details > summary {
     color:red!important;
 }
 p.pseudo:hover {
     color:red;
+    font-size: larger;
+    background-color: lightgray;
 }
 div.media {
     border: 5px outset pink;
@@ -29,19 +25,19 @@ div.nested {
 footer.index:hover {
     color:red;
 }
-footer {
+footer.index {
     position: absolute;
     left: 50px;
     bottom: 0px;
 }
-div#box {
+header#box {
     margin:20px;
     padding:10px;
     border:3px dashed blue;
     width:500px 300px;
     background-color: aqua;
 }
-header#media {
+div.sticky {
     position:sticky;
     top: 0;
     padding: 3px;
@@ -51,11 +47,9 @@ header#media {
     animation-name: marquee;
     animation-duration: 5s;
     position: relative;
-    background-color: red;
 }
 @keyframes marquee {
     0% {left:0px;}
     50% {left:400px;}
     100% {left:0px;}
 }
-
