--- a/style.css
+++ b/style.css
@@ -1,17 +1,69 @@
+p.home {
+    position: relative;
+    top: 50px;
+    right: 100px;
+    width: 40%;
+    float: right;
+    font-size: 25px;
+    border: 3px dotted #FFD166;
+}
+
+img.home {
+    position: relative;
+    top: 50px;
+    left: 100px;
+    width: 30%;
+    float: left;
+    border: 3px dotted #FFD166;
+}
+
+div.home {
+    text-align: center;
+    position: relative;
+    top: 40px;
+    color: #333;
+    background-color: #FFD166;
+    border-radius: 25px;
+    width: 60%;
+    margin: auto;
+}
+
+h1.home {
+    font-size: 70px;
+}
+
+h2.home {
+    font-size: 50px;
+}
+
+body.home {
+    background-image: url(website-background1.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed; 
+    background-size: 100% 100%;
+}
+
+body {
+    font-family: 'Courier New', Courier, monospace;
+}
+
+
 ul.navbar {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #AAC;
+    background-color: #26547C;
+    border-radius: 2px;
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 1;
 }
 
 li.navbar {
     float: left;
-    border-right: 1px solid #FFF;
+    border-right: 1px solid #FCFCFC;
 }
 
 li:last-child {
@@ -20,20 +72,20 @@ li:last-child {
 
 li.navbar a {
     display: block;
-    color: black;
+    color: #FCFCFC;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 
 li.navbar a:hover {
-    background-color: #DD0;
+    background-color: #00AFB9;
 }
 
 a.active {
-    background-color: #ff0
+    background-color: #FFD166;
+    color: #26547C;
 }
-
 
 /*
 ul,ol{
