--- a/style.css
+++ b/style.css
@@ -1,22 +1,48 @@
+/* Films Page */
 
+body.film {
+    background-image: url(website-background2.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+}
 
+div.title {
+    text-align: center;
+    position: relative;
+    top: 40px;
+    color: #333;
+    background-color: #FFD166;
+    border-radius: 25px;
+    width: 60%;
+    margin: auto;
+}
+
+h1.title {
+    font-size: 60px;
+}
+
+h2.title {
+    font-size: 40px;
+}
+/* Home Page */
 
 p.home {
     position: relative;
     top: 50px;
-    right: 100px;
+    right: 200px;
     width: 40%;
     float: right;
-    font-size: 25px;
+    font-size: 20px;
     border: 3px dotted #FFD166;
+    text-align: center;
 }
 
 img.home {
     position: relative;
     top: 50px;
-    left: 100px;
-    width: 30%;
-    float: left;
+    left: 200px;
+    width: 25%;
     border: 3px dotted #FFD166;
 }
 
@@ -32,11 +58,11 @@ div.home {
 }
 
 h1.home {
-    font-size: 70px;
+    font-size: 60px;
 }
 
 h2.home {
-    font-size: 50px;
+    font-size: 40px;
 }
 
 body.home {
@@ -45,11 +71,12 @@ body.home {
     background-attachment: fixed; 
     background-size: 100% 100%;
 }
-
+/* All Pages */
 body {
     font-family: 'Courier New', Courier, monospace;
 }
 
+/* Navigation Bar */
 
 ul.navbar {
     list-style-type: none;
